--- a/Notebooks/Totalsegmentator/itkimage2segimageAndRadiomicsNotebook.ipynb
+++ b/Notebooks/Totalsegmentator/itkimage2segimageAndRadiomicsNotebook.ipynb
@@ -143,7 +143,7 @@
         "import json\n",
         "import logging\n",
         "import matplotlib.pyplot as plt\n",
-        "# import nibabel as nib\n",
+        "import nibabel as nib\n",
         "import numpy as np\n",
         "import os\n",
         "from pathlib import Path\n",
