--- a/Notebooks/Totalsegmentator/dicomsegAndRadiomicsSR_Notebook.ipynb
+++ b/Notebooks/Totalsegmentator/dicomsegAndRadiomicsSR_Notebook.ipynb
@@ -642,8 +642,10 @@
     {
       "cell_type": "code",
       "source": [
-        "totalsegmentator_segments_code_mapping_df=pd.read_csv('https://raw.githubusercontent.com/vkt1414/Cloud-Resources-Workflows/main/configs/TotalSegmentator/TotalSegmentator%20v1%20SCT%20mapping%20-%20total.csv')\n",
-        "totalsegmentator_radiomics_features_code_mapping_df=pd.read_csv('https://raw.githubusercontent.com/vkt1414/Cloud-Resources-Workflows/main/configs/TotalSegmentator/radiomicsFeaturesMaps.csv')"
+        "totalsegmentator_segments_code_mapping_df=pd.read_csv('https://raw.githubusercontent.com/vkt1414/Cloud-Resources-Workflows/main/configs/TotalSegmentator/TotalSegmentator%20v1%20SCT%20mapping%20-%20total.csv', dtype={'SegmentedPropertyTypeModifierCodeSequence.CodeValue': str})\n",
+        "totalsegmentator_radiomics_features_code_mapping_df=pd.read_csv('https://raw.githubusercontent.com/vkt1414/Cloud-Resources-Workflows/main/configs/TotalSegmentator/radiomicsFeaturesMaps.csv')\n",
+        "#totalsegmentator_radiomics_features_code_mapping_df=totalsegmentator_radiomics_features_code_mapping_df[totalsegmentator_radiomics_features_code_mapping_df['pyradiomics_feature_class'] == 'firstorder']\n",
+        "totalsegmentator_segments_code_mapping_df"
       ],
       "metadata": {
         "id": "6E0y_02qWRU6"
@@ -893,7 +895,9 @@
         "      my_dict[\"Laterality\"] = laterality_dict\n",
         "\n",
         "    # Append the remaining code after creating the measurement_across_segments_combined array\n",
-        "\n",
+        "    # Check if the laterality dictionary is empty or contains NaN values\n",
+        "    # if laterality_dict and not any(value == 'nan' or pd.isna(value) for value in laterality_dict.values()):\n",
+        "    #   my_dict[\"Laterality\"] = laterality_dict\n",
         "        \n",
         "    measurement = []  \n",
         "    # number of features - number of columns in df_features - 2 (label_name and ReferencedSegment)\n",
@@ -1938,14 +1942,14 @@
       "source": [
         "start_time = time.time()\n",
         "try:\n",
-        "  os.remove(f'{curr_dir}/itkimage2segimageDICOMsegFiles.tar.lz4')\n",
+        "  os.remove(f'{curr_dir}/dicomsegAndRadiomicsSR_DICOMsegFiles.tar.lz4')\n",
         "  os.remove(f'{curr_dir}/pyradiomicsRadiomicsFeatures.tar.lz4')\n",
         "  os.remove(f'{curr_dir}/structuredReportsDICOM.tar.lz4')\n",
         "  os.remove(f'{curr_dir}/structuredReportsJSON.tar.lz4')\n",
         "\n",
         "except OSError:\n",
         "  pass\n",
-        "!tar cvf - {curr_dir}/itkimage2segimage | lz4 > {curr_dir}/itkimage2segimageDICOMsegFiles.tar.lz4\n",
+        "!tar cvf - {curr_dir}/itkimage2segimage | lz4 > {curr_dir}/dicomsegAndRadiomicsSR_DICOMsegFiles.tar.lz4\n",
         "!tar cvf - {curr_dir}/radiomics | lz4 > {curr_dir}/pyradiomicsRadiomicsFeatures.tar.lz4\n",
         "!tar cvf - {curr_dir}/structuredReportsDICOM | lz4 > {curr_dir}/structuredReportsDICOM.tar.lz4\n",
         "!tar cvf - {curr_dir}/structuredReportsJSON | lz4 > {curr_dir}/structuredReportsJSON.tar.lz4\n",
@@ -2311,10 +2315,10 @@
         "runtime_stats.to_csv('runtime.csv')\n",
         "runtime_stats['output_archiving_time']=output_archiving_time\n",
         "try:\n",
-        "  os.remove('itkimage2segimageUsageMetrics.lz4')\n",
+        "  os.remove('dicomsegAndRadiomicsSR_UsageMetrics.lz4')\n",
         "except OSError:\n",
         "  pass\n",
-        "!lz4 {curr_dir}/runtime.csv itkimage2segimageUsageMetrics.lz4\n",
+        "!lz4 {curr_dir}/runtime.csv dicomsegAndRadiomicsSR_UsageMetrics.lz4\n",
         "runtime_stats"
       ]
     }
