--- a/pricingOptimization/Top_20_cheapest_GPUs.ipynb
+++ b/pricingOptimization/Top_20_cheapest_GPUs.ipynb
@@ -33,7 +33,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "evveQJMmP50Z",
-        "outputId": "f2b056f0-4508-4904-b0ad-712884c733ba"
+        "outputId": "57fd8e57-9f81-4e5e-d953-dc5c1f2fd17d"
       },
       "outputs": [
         {
@@ -153,6 +153,54 @@
     {
       "cell_type": "code",
       "source": [
+        "sorted_pricing = pricing.stack().sort_values()\n",
+        "sorted_pricing.head(20)"
+      ],
+      "metadata": {
+        "id": "rxdyTPeJXb3B",
+        "outputId": "7afb5fed-34e2-4478-e889-0b997bed7dc1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Region                      \n",
+              "us-west4                 E2     10.325120\n",
+              "us-central1              C2     13.834960\n",
+              "us-east1                 C2     13.834960\n",
+              "us-west1                 C2     13.834960\n",
+              "europe-central2          E2     14.500720\n",
+              "asia-east2               E2     15.119760\n",
+              "us-east5                 C2     15.365040\n",
+              "us-west4                 N1     15.966560\n",
+              "me-west1                 C2     16.901544\n",
+              "europe-west4             C2     16.944760\n",
+              "asia-south2              N2     17.160840\n",
+              "northamerica-northeast2  N2     17.309760\n",
+              "europe-west8             C2     17.823446\n",
+              "europe-west9             C2     17.823446\n",
+              "europe-west12            C2     17.847098\n",
+              "europe-southwest1        C2     18.130747\n",
+              "us-south1                C2     18.130747\n",
+              "europe-west2             N2     18.372640\n",
+              "us-west1                 N2D    18.606240\n",
+              "us-east5                 T2D    18.606240\n",
+              "dtype: float64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "gpu.sort_values()"
       ],
       "metadata": {
@@ -162,7 +210,7 @@
         "id": "Xyz93YrtZ20h",
         "outputId": "97a43819-cf00-438a-c07f-bf0958bba473"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
