--- a/Notebooks/Totalsegmentator/downloadDicomAndConvertNotebook.ipynb
+++ b/Notebooks/Totalsegmentator/downloadDicomAndConvertNotebook.ipynb
@@ -350,33 +350,80 @@
       },
       "outputs": [],
       "source": [
+        "# class MemoryMonitor:\n",
+        "#     def __init__(self):\n",
+        "#         self.keep_measuring = True\n",
+        "\n",
+        "#     def measure_usage(self):\n",
+        "#         cpu_usage = []\n",
+        "#         ram_usage_mb=[]\n",
+        "#         disk_usage_all=[]\n",
+        "#         time_stamps = []\n",
+        "#         start_time = time.time()\n",
+        "#         while self.keep_measuring:\n",
+        "#             cpu = psutil.cpu_percent()\n",
+        "#             ram = psutil.virtual_memory()\n",
+        "#             disk_used= psutil.disk_usage('/').used/1024/1024/1024\n",
+        "#             disk_total= psutil.disk_usage('/').total/1024/1024/1024\n",
+        "#             ram_total_mb = psutil.virtual_memory().total / 1024 / 1024\n",
+        "#             ram_mb = (ram.total - ram.available) / 1024 / 1024\n",
+        "\n",
+        "#             cpu_usage.append(cpu)\n",
+        "#             ram_usage_mb.append(ram_mb)\n",
+        "#             disk_usage_all.append(disk_used)\n",
+        "\n",
+        "#             time_stamps.append(time.time()- start_time)\n",
+        "#             sleep(1)\n",
+        "\n",
+        "#         return cpu_usage, ram_usage_mb, time_stamps, ram_total_mb,  disk_usage_all, disk_total"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "class MemoryMonitor:\n",
         "    def __init__(self):\n",
         "        self.keep_measuring = True\n",
+        "        self.working_disk_path = self.get_working_disk_path()\n",
+        "\n",
+        "    def get_working_disk_path(self):\n",
+        "        partitions = psutil.disk_partitions()\n",
+        "        for partition in partitions:\n",
+        "            if partition.mountpoint == '/':\n",
+        "                return '/'\n",
+        "            elif '/cromwell_root' in partition.mountpoint:\n",
+        "                return '/cromwell_root'\n",
+        "        return '/'  # Default to root directory if no specific path is found\n",
         "\n",
         "    def measure_usage(self):\n",
         "        cpu_usage = []\n",
-        "        ram_usage_mb=[]\n",
-        "        disk_usage_all=[]\n",
+        "        ram_usage_mb = []\n",
+        "        disk_usage_all = []\n",
         "        time_stamps = []\n",
         "        start_time = time.time()\n",
         "        while self.keep_measuring:\n",
         "            cpu = psutil.cpu_percent()\n",
         "            ram = psutil.virtual_memory()\n",
-        "            disk_used= psutil.disk_usage('/').used/1024/1024/1024\n",
-        "            disk_total= psutil.disk_usage('/').total/1024/1024/1024\n",
-        "            ram_total_mb = psutil.virtual_memory().total / 1024 / 1024\n",
+        "            disk_usage = psutil.disk_usage(self.working_disk_path)\n",
+        "            disk_used = disk_usage.used / 1024 / 1024 / 1024\n",
+        "            disk_total = disk_usage.total / 1024 / 1024 / 1024\n",
+        "            ram_total_mb = ram.total / 1024 / 1024\n",
         "            ram_mb = (ram.total - ram.available) / 1024 / 1024\n",
         "\n",
         "            cpu_usage.append(cpu)\n",
         "            ram_usage_mb.append(ram_mb)\n",
         "            disk_usage_all.append(disk_used)\n",
         "\n",
-        "            time_stamps.append(time.time()- start_time)\n",
+        "            time_stamps.append(time.time() - start_time)\n",
         "            sleep(1)\n",
         "\n",
-        "        return cpu_usage, ram_usage_mb, time_stamps, ram_total_mb,  disk_usage_all, disk_total"
-      ]
+        "        return cpu_usage, ram_usage_mb, time_stamps, ram_total_mb, disk_usage_all, disk_total\n"
+      ],
+      "metadata": {
+        "id": "aAQcXTtAGUfZ"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
