--- a/Notebooks/Totalsegmentator/dicomsegAndRadiomicsSR_Notebook.ipynb
+++ b/Notebooks/Totalsegmentator/dicomsegAndRadiomicsSR_Notebook.ipynb
@@ -42,7 +42,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "aOhW6CUz1qIm"
       },
@@ -63,12 +63,12 @@
       "metadata": {
         "id": "MrdPt-v_mr9U"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "YxH7dpgiDsUN"
       },
@@ -89,7 +89,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "PRDMnjsF5_JS"
       },
@@ -115,7 +115,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -180,7 +180,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "3RFWd8GDC4g9",
         "tags": [
@@ -226,7 +226,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -274,7 +274,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -335,7 +335,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -370,7 +370,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -430,7 +430,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "ByNK-uLo5tfh"
       },
@@ -453,7 +453,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "o0ufgeVFnlCm"
       },
@@ -512,7 +512,7 @@
       "metadata": {
         "id": "cmvzX809tGxM"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -531,7 +531,7 @@
           "height": 1000
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1136,7 +1136,7 @@
       "metadata": {
         "id": "DaY8pJm7UXMm"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1170,7 +1170,7 @@
       "metadata": {
         "id": "aiDObu4bwmXl"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1203,7 +1203,7 @@
       "metadata": {
         "id": "6LCqiBFcfZqT"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1234,12 +1234,12 @@
       "metadata": {
         "id": "3ctV2LN2h-kt"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "id": "s_xmbQMgNN5H"
       },
@@ -1256,7 +1256,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "id": "FTPLJHOeNN5I"
       },
@@ -1268,7 +1268,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "id": "5r_ShPVDNN5I"
       },
@@ -1303,7 +1303,7 @@
       "metadata": {
         "id": "LuYIqIIgilyZ"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1369,7 +1369,7 @@
       "metadata": {
         "id": "NH_cs3nYRV5v"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1571,12 +1571,12 @@
       "metadata": {
         "id": "cH6G9RDcPjzs"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "metadata": {
         "id": "xwRE4F8AmscK"
       },
@@ -1706,7 +1706,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "metadata": {
         "id": "_rMtxR77N_RH"
       },
@@ -1715,29 +1715,40 @@
         "class MemoryMonitor:\n",
         "    def __init__(self):\n",
         "        self.keep_measuring = True\n",
+        "        self.working_disk_path = self.get_working_disk_path()\n",
+        "\n",
+        "    def get_working_disk_path(self):\n",
+        "        partitions = psutil.disk_partitions()\n",
+        "        for partition in partitions:\n",
+        "            if partition.mountpoint == '/':\n",
+        "                return '/'\n",
+        "            elif '/cromwell_root' in partition.mountpoint:\n",
+        "                return '/cromwell_root'\n",
+        "        return '/'  # Default to root directory if no specific path is found\n",
         "\n",
         "    def measure_usage(self):\n",
         "        cpu_usage = []\n",
-        "        ram_usage_mb=[]\n",
-        "        disk_usage_all=[]\n",
+        "        ram_usage_mb = []\n",
+        "        disk_usage_all = []\n",
         "        time_stamps = []\n",
         "        start_time = time.time()\n",
         "        while self.keep_measuring:\n",
         "            cpu = psutil.cpu_percent()\n",
         "            ram = psutil.virtual_memory()\n",
-        "            disk_used= psutil.disk_usage('/').used/1024/1024/1024\n",
-        "            disk_total= psutil.disk_usage('/').total/1024/1024/1024\n",
-        "            ram_total_mb = psutil.virtual_memory().total / 1024 / 1024\n",
+        "            disk_usage = psutil.disk_usage(self.working_disk_path)\n",
+        "            disk_used = disk_usage.used / 1024 / 1024 / 1024\n",
+        "            disk_total = disk_usage.total / 1024 / 1024 / 1024\n",
+        "            ram_total_mb = ram.total / 1024 / 1024\n",
         "            ram_mb = (ram.total - ram.available) / 1024 / 1024\n",
         "\n",
         "            cpu_usage.append(cpu)\n",
         "            ram_usage_mb.append(ram_mb)\n",
         "            disk_usage_all.append(disk_used)\n",
         "\n",
-        "            time_stamps.append(time.time()- start_time)\n",
+        "            time_stamps.append(time.time() - start_time)\n",
         "            sleep(1)\n",
         "\n",
-        "        return cpu_usage, ram_usage_mb, time_stamps, ram_total_mb,  disk_usage_all, disk_total"
+        "        return cpu_usage, ram_usage_mb, time_stamps, ram_total_mb, disk_usage_all, disk_total\n"
       ]
     },
     {
@@ -1751,7 +1762,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "metadata": {
         "id": "w_-jEmCgKJBe",
         "colab": {
@@ -2601,7 +2612,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "metadata": {
         "id": "S4xcpEa8pzZH",
         "colab": {
@@ -2754,7 +2765,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "metadata": {
         "id": "3sSM4RRfpxeC",
         "colab": {
@@ -3127,7 +3138,7 @@
       "metadata": {
         "id": "RszMhgRN60FN"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3138,7 +3149,7 @@
       "metadata": {
         "id": "WdPO3chl9FCr"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3149,7 +3160,7 @@
       "metadata": {
         "id": "tVlkgcUh9vWq"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3160,7 +3171,7 @@
       "metadata": {
         "id": "HKjzrYZm_snz"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3192,7 +3203,7 @@
       "metadata": {
         "id": "sXa43jGoCCPX"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     }
   ],
