--- a/Notebooks/Totalsegmentator/inferenceTotalSegmentatorNotebook.ipynb
+++ b/Notebooks/Totalsegmentator/inferenceTotalSegmentatorNotebook.ipynb
@@ -46,7 +46,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "p0BAKG7AOI9a"
       },
@@ -60,7 +60,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "R68Zs8VTrvKg"
       },
@@ -84,7 +84,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -139,7 +139,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "JJ-g6Lw2RDUp",
         "tags": [
@@ -163,7 +163,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -198,7 +198,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -234,7 +234,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -290,7 +290,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "sqeESHc7ntX8"
       },
@@ -308,7 +308,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "cGQ_URr1pQpj"
       },
@@ -317,7 +317,16 @@
         "class MemoryMonitor:\n",
         "    def __init__(self):\n",
         "        self.keep_measuring = True\n",
+        "        self.working_disk_path = self.get_working_disk_path()\n",
         "\n",
+        "    def get_working_disk_path(self):\n",
+        "        partitions = psutil.disk_partitions()\n",
+        "        for partition in partitions:\n",
+        "            if partition.mountpoint == '/':\n",
+        "                return '/'\n",
+        "            elif '/cromwell_root' in partition.mountpoint:\n",
+        "                return '/cromwell_root'\n",
+        "        return '/'  # Default to root directory if no specific path is found\n",
         "    def measure_usage(self):\n",
         "        cpu_usage = []\n",
         "        ram_usage_mb=[]\n",
@@ -328,7 +337,7 @@
         "        while self.keep_measuring:\n",
         "            cpu = psutil.cpu_percent()\n",
         "            ram = psutil.virtual_memory()\n",
-        "            disk_used= psutil.disk_usage('/').used/1024/1024/1024\n",
+        "            disk_usage = psutil.disk_usage(self.working_disk_path)\n",
         "            disk_total= psutil.disk_usage('/').total/1024/1024/1024\n",
         "            ram_total_mb = psutil.virtual_memory().total / 1024 / 1024\n",
         "            ram_mb = (ram.total - ram.available) / 1024 / 1024\n",
@@ -353,7 +362,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "tXm-eEONAHMX"
       },
@@ -375,7 +384,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "10_jVVTElNZ5"
       },
@@ -455,7 +464,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1517,7 +1526,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1581,7 +1590,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
