--- a/Notebooks/Totalsegmentator/downloadDicomAndConvertAndInferenceTotalSegmentatorNotebook.ipynb
+++ b/Notebooks/Totalsegmentator/downloadDicomAndConvertAndInferenceTotalSegmentatorNotebook.ipynb
@@ -45,7 +45,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "p0BAKG7AOI9a"
       },
@@ -59,7 +59,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "R68Zs8VTrvKg"
       },
@@ -74,7 +74,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "V_Ms6GwHHOr2"
       },
@@ -99,7 +99,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "16RKHQCnIM2V"
       },
@@ -123,7 +123,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -165,7 +165,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "JJ-g6Lw2RDUp",
         "tags": [
@@ -196,7 +196,7 @@
       "metadata": {
         "id": "DHaIwv0stya4"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -210,7 +210,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -249,7 +249,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "UPjtDJS4JIdg"
       },
@@ -273,7 +273,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "zpuo1QtbJjvW"
       },
@@ -296,7 +296,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "sqeESHc7ntX8"
       },
@@ -315,7 +315,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "-1nH_ABkKoP2"
       },
@@ -348,7 +348,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "u2jkSpS2KvXU"
       },
@@ -388,7 +388,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "id": "_v_X_7XsuWY9"
       },
@@ -406,7 +406,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "id": "kZYXfp-UtWMs"
       },
@@ -428,7 +428,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "id": "10_jVVTElNZ5"
       },
@@ -514,7 +514,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "id": "cGQ_URr1pQpj"
       },
@@ -523,7 +523,16 @@
         "class MemoryMonitor:\n",
         "    def __init__(self):\n",
         "        self.keep_measuring = True\n",
+        "        self.working_disk_path = self.get_working_disk_path()\n",
         "\n",
+        "    def get_working_disk_path(self):\n",
+        "        partitions = psutil.disk_partitions()\n",
+        "        for partition in partitions:\n",
+        "            if partition.mountpoint == '/':\n",
+        "                return '/'\n",
+        "            elif '/cromwell_root' in partition.mountpoint:\n",
+        "                return '/cromwell_root'\n",
+        "        return '/'  # Default to root directory if no specific path is found\n",
         "    def measure_usage(self):\n",
         "        cpu_usage = []\n",
         "        ram_usage_mb=[]\n",
@@ -534,7 +543,7 @@
         "        while self.keep_measuring:\n",
         "            cpu = psutil.cpu_percent()\n",
         "            ram = psutil.virtual_memory()\n",
-        "            disk_used= psutil.disk_usage('/').used/1024/1024/1024\n",
+        "            disk_usage = psutil.disk_usage(self.working_disk_path)\n",
         "            disk_total= psutil.disk_usage('/').total/1024/1024/1024\n",
         "            ram_total_mb = psutil.virtual_memory().total / 1024 / 1024\n",
         "            ram_mb = (ram.total - ram.available) / 1024 / 1024\n",
@@ -568,7 +577,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -682,7 +691,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "id": "bxuuD6yqdmzF",
         "outputId": "02d2f7fc-7368-4aee-cce2-2a6a5f5c39ea",
@@ -723,7 +732,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "id": "Lc7Hep0lkJWd",
         "outputId": "7900acc3-8216-45c5-b043-5430d2a1986e",
