--- a/Notebooks/Totalsegmentator/downloadDicomAndConvertAndInferenceTotalSegmentatorNotebook.ipynb
+++ b/Notebooks/Totalsegmentator/downloadDicomAndConvertAndInferenceTotalSegmentatorNotebook.ipynb
@@ -544,7 +544,8 @@
         "            cpu = psutil.cpu_percent()\n",
         "            ram = psutil.virtual_memory()\n",
         "            disk_usage = psutil.disk_usage(self.working_disk_path)\n",
-        "            disk_total= psutil.disk_usage('/').total/1024/1024/1024\n",
+        "            disk_used = disk_usage.used / 1024 / 1024 / 1024\n",
+        "            disk_total = disk_usage.total / 1024 / 1024 / 1024\n",
         "            ram_total_mb = psutil.virtual_memory().total / 1024 / 1024\n",
         "            ram_mb = (ram.total - ram.available) / 1024 / 1024\n",
         "\n",
