--- a/Notebooks/Totalsegmentator/endToEndTotalSegmentatorNotebook.ipynb
+++ b/Notebooks/Totalsegmentator/endToEndTotalSegmentatorNotebook.ipynb
@@ -16,7 +16,7 @@
         "id": "EHS1DmzV54av"
       },
       "source": [
-        "#**This Notebook does the last step in the split workflow on Terra**"
+        "#**This Notebook includes end to end from DICOM files to Inference and creating DICOM SEG and DICOM SR Objects**"
       ]
     },
     {
@@ -25,7 +25,7 @@
         "id": "JBuvJLVl6C4g"
       },
       "source": [
-        "The NIFTI files generated from Totalsegmentator are provided as input and the DICOM files are downloaded again to generate DICOM SEG Objects\n",
+        "\n",
         "\n",
         "Please cite:\n",
         "Herz C, Fillion-Robin JC, Onken M, Riesmeier J, Lasso A, Pinter C, Fichtinger G, Pieper S, Clunie D, Kikinis R, Fedorov A. dcmqi: An Open Source Library for Standardized Communication of Quantitative Image Analysis Results Using DICOM. Cancer Res. 2017 Nov 1;77(21):e87-e90. doi: 10.1158/0008-5472.CAN-17-0336. PMID: 29092948; PMCID: PMC5675033."
@@ -42,71 +42,71 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "aOhW6CUz1qIm"
       },
       "outputs": [],
       "source": [
-        "%%capture\n",
-        "#Installing lz4 for compression/decompression\n",
-        "#xvfb required for previewing Totalsegmentator png images\n",
-        "!apt-get install lz4 dcm2niix wget pigz xvfb plastimatch ffmpeg"
+        "# %%capture\n",
+        "# #Installing lz4 for compression/decompression\n",
+        "# #xvfb required for previewing Totalsegmentator png images\n",
+        "# !apt-get install lz4 dcm2niix wget pigz xvfb plastimatch ffmpeg"
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "%%capture\n",
-        "#Installing Totalsegmentator for Inference\n",
-        "#pyradiomics nibabel required for extracting radiomics features\n",
-        "#p_tqdm tqdm for monitoring progress of radiomics features extraction\n",
-        "#nvidia-ml-py3 for capturing gpu utilization\n",
+        "# %%capture\n",
+        "# #Installing Totalsegmentator for Inference\n",
+        "# #pyradiomics nibabel required for extracting radiomics features\n",
+        "# #p_tqdm tqdm for monitoring progress of radiomics features extraction\n",
+        "# #nvidia-ml-py3 for capturing gpu utilization\n",
         "\n",
-        "!pip install pyradiomics nibabel p_tqdm tqdm pydicom TotalSegmentator nvidia-ml-py3 "
+        "# !pip install pyradiomics nibabel p_tqdm tqdm pydicom TotalSegmentator nvidia-ml-py3 "
       ],
       "metadata": {
         "id": "MrdPt-v_mr9U"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "YxH7dpgiDsUN"
       },
       "outputs": [],
       "source": [
-        "%%capture\n",
-        "dcmqi_release_url = \"https://github.com/QIICR/dcmqi/releases/download/v1.2.5/dcmqi-1.2.5-linux.tar.gz\"\n",
-        "dcmqi_download_path = f\"dcmqi-1.2.5-linux.tar.gz\"\n",
-        "dcmqi_path = f\"dcmqi-1.2.5-linux\"\n",
+        "# %%capture\n",
+        "# dcmqi_release_url = \"https://github.com/QIICR/dcmqi/releases/download/v1.2.5/dcmqi-1.2.5-linux.tar.gz\"\n",
+        "# dcmqi_download_path = f\"dcmqi-1.2.5-linux.tar.gz\"\n",
+        "# dcmqi_path = f\"dcmqi-1.2.5-linux\"\n",
         "\n",
-        "!wget -O $dcmqi_download_path $dcmqi_release_url\n",
+        "# !wget -O $dcmqi_download_path $dcmqi_release_url\n",
         "\n",
-        "!tar -xvf $dcmqi_download_path \n",
+        "# !tar -xvf $dcmqi_download_path \n",
         "\n",
-        "!mv $dcmqi_path/bin/* /bin\n",
-        "!rm -r $dcmqi_download_path $dcmqi_path"
+        "# !mv $dcmqi_path/bin/* /bin\n",
+        "# !rm -r $dcmqi_download_path $dcmqi_path"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "PRDMnjsF5_JS"
       },
       "outputs": [],
       "source": [
-        "%%capture\n",
-        "#install s5cmd\n",
-        "!wget \"https://github.com/peak/s5cmd/releases/download/v2.0.0/s5cmd_2.0.0_Linux-64bit.tar.gz\"\n",
-        "!tar -xvzf \"s5cmd_2.0.0_Linux-64bit.tar.gz\"\n",
-        "!rm \"s5cmd_2.0.0_Linux-64bit.tar.gz\"\n",
-        "!mv s5cmd /usr/local/bin/s5cmd\n",
-        "!rm CHANGELOG.md LICENSE README.md"
+        "# %%capture\n",
+        "# #install s5cmd\n",
+        "# !wget \"https://github.com/peak/s5cmd/releases/download/v2.0.0/s5cmd_2.0.0_Linux-64bit.tar.gz\"\n",
+        "# !tar -xvzf \"s5cmd_2.0.0_Linux-64bit.tar.gz\"\n",
+        "# !rm \"s5cmd_2.0.0_Linux-64bit.tar.gz\"\n",
+        "# !mv s5cmd /usr/local/bin/s5cmd\n",
+        "# !rm CHANGELOG.md LICENSE README.md"
       ]
     },
     {
@@ -120,7 +120,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -187,7 +187,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "3RFWd8GDC4g9",
         "tags": [
@@ -212,13 +212,13 @@
     {
       "cell_type": "code",
       "source": [
-        "try:\n",
-        "  os.remove(f'{curr_dir}/batch_1.csv')\n",
-        "except OSError:\n",
-        "  pass\n",
+        "# try:\n",
+        "#   os.remove(f'{curr_dir}/batch_1.csv')\n",
+        "# except OSError:\n",
+        "#   pass\n",
         "\n",
-        "!wget https://raw.githubusercontent.com/vkt1414/Cloud-Resources-Workflows/main/sampleManifests/batch_1.csv\n",
-        "csvFilePath =glob.glob('*.csv')[0]"
+        "# !wget https://raw.githubusercontent.com/vkt1414/Cloud-Resources-Workflows/main/sampleManifests/batch_1.csv\n",
+        "# csvFilePath =glob.glob('*.csv')[0]"
       ],
       "metadata": {
         "id": "smIAQvIiaPTO",
@@ -227,7 +227,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -259,7 +259,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -296,7 +296,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -332,7 +332,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -397,7 +397,7 @@
           "height": 1000
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1003,7 +1003,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "ByNK-uLo5tfh"
       },
@@ -1030,7 +1030,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "o0ufgeVFnlCm"
       },
@@ -1089,7 +1089,7 @@
       "metadata": {
         "id": "cmvzX809tGxM"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1107,7 +1107,7 @@
       "metadata": {
         "id": "uultH-8naOht"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1129,7 +1129,7 @@
       "metadata": {
         "id": "yymi1fnid_fH"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1142,7 +1142,7 @@
       "metadata": {
         "id": "DaY8pJm7UXMm"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1176,7 +1176,7 @@
       "metadata": {
         "id": "aiDObu4bwmXl"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1209,7 +1209,7 @@
       "metadata": {
         "id": "6LCqiBFcfZqT"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1240,12 +1240,12 @@
       "metadata": {
         "id": "3ctV2LN2h-kt"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "id": "s_xmbQMgNN5H"
       },
@@ -1262,7 +1262,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "id": "FTPLJHOeNN5I"
       },
@@ -1274,7 +1274,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "metadata": {
         "id": "5r_ShPVDNN5I"
       },
@@ -1309,7 +1309,7 @@
       "metadata": {
         "id": "LuYIqIIgilyZ"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1375,7 +1375,7 @@
       "metadata": {
         "id": "NH_cs3nYRV5v"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1577,12 +1577,12 @@
       "metadata": {
         "id": "cH6G9RDcPjzs"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "metadata": {
         "id": "xwRE4F8AmscK"
       },
@@ -1755,7 +1755,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "metadata": {
         "id": "_rMtxR77N_RH"
       },
